Fixed tests for java8
Signed-off-by: pierantoniomerlino <pierantonio.merlino@eurotech.com>